[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/Misc/Barrel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Codes/Trash.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/Move.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sprites/Misc/LargeShadow.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Kicked",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 20 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 20 )

[node name="Barrel" type="KinematicBody2D" groups=["Barrel"]]
collision_layer = 4
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, 15.25 )
scale = Vector2( 1, 0.675 )
texture = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Idle"
frame = 1
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="HurtArea" type="Area2D" parent="." groups=["Enemy"]]
visible = false
collision_layer = 4
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="DamageArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, -4 )
shape = SubResource( 12 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
bus = "SFX"

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="HurtArea" to="." method="_on_HurtArea_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
